Address code review feedback and improve code quality
Co-authored-by: Jayhello <16144935+Jayhello@users.noreply.github.com>